Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-100

Fixes for ODBCAppender

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None
    • Windows Visual Studio 2003

    Description

      I noticed the ODBC appender wasn't working and I needed it so I fixed the bugs with it.

      The attached patch file for build.xml also includes a property called "use-odbc" that will define LOG4CXX_HAVE_ODBC so that odbc support will be compiled in.

      The other files are patches to the source. I didn't try to to change the design, just to mkae the thing work.

      Attachments

        1. odbcappender.h.patch
          4 kB
          Josh Clark
        2. odbcappender.cpp.patch
          9 kB
          Josh Clark
        3. class.cpp.patch
          0.5 kB
          Josh Clark
        4. build.xml.patch
          1 kB
          Josh Clark

        Activity

          People

            carnold@apache.org Curt Arnold
            jpc8112 Josh Clark
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: