LOGCXX-100: Fixes for ODBCAppender